# ocrvid

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ocrvid/: __init__.py  cli.py  config.py  ocr.py  playlist.py  video.py
tests/: test_cli.py  test_key.py
